add href to error page

--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -23,5 +23,5 @@ block content
       div
         span sorry about that!
         span
-          a
+          a(href='/')
             b return home?
